[gd_scene load_steps=6 format=2]

[ext_resource path="res://themes/darktheme/darktheme.theme" type="Theme" id=1]
[ext_resource path="res://themes/darktheme/fonts/Bangers/Bangers-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/custom/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://src/custom/CGFDeckBuilder.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 107
font_data = ExtResource( 2 )

[node name="Menu" type="Panel"]
margin_right = 1280.0
margin_bottom = 720.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckBuilder" parent="." instance=ExtResource( 4 )]

[node name="MainMenu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MainMenu"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )

[node name="VBox" type="VBoxContainer" parent="MainMenu"]
margin_right = 1280.0
margin_bottom = 720.0

[node name="Margin" type="MarginContainer" parent="MainMenu/VBox"]
margin_right = 1280.0
margin_bottom = 358.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 90

[node name="Label" type="Label" parent="MainMenu/VBox/Margin"]
margin_top = 108.0
margin_right = 1280.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 1 )
text = "Godot 
Card Game Framework"
align = 1

[node name="Center" type="CenterContainer" parent="MainMenu/VBox"]
margin_top = 361.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3

[node name="VButtons" type="VBoxContainer" parent="MainMenu/VBox/Center"]
margin_left = 544.0
margin_top = 104.0
margin_right = 736.0
margin_bottom = 254.0
rect_min_size = Vector2( 192, 0 )
custom_constants/separation = 10

[node name="SinglePlayerDemo" type="Button" parent="MainMenu/VBox/Center/VButtons"]
margin_right = 192.0
margin_bottom = 22.0
text = "Single Player Demo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplayer" type="Button" parent="MainMenu/VBox/Center/VButtons"]
margin_top = 32.0
margin_right = 192.0
margin_bottom = 54.0
text = "Multiplayer Demo"

[node name="Deckbuilder" type="Button" parent="MainMenu/VBox/Center/VButtons"]
margin_top = 64.0
margin_right = 192.0
margin_bottom = 86.0
text = "Deck Builder"

[node name="GUT" type="Button" parent="MainMenu/VBox/Center/VButtons"]
margin_top = 96.0
margin_right = 192.0
margin_bottom = 118.0
text = "Tests"

[node name="Exit" type="Button" parent="MainMenu/VBox/Center/VButtons"]
margin_top = 128.0
margin_right = 192.0
margin_bottom = 150.0
text = "Exit"

[node name="MenuTween" type="Tween" parent="."]
